compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    WHITE_SPACE

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration declarations
Rule 2     declarations -> declaration declarations
Rule 3     declarations -> empty
Rule 4     declaration -> struct ID inheritance LCURLYBRACE item_decls RCURLYBRACE
Rule 5     struct -> instance CLASS
Rule 6     struct -> INTERFACE
Rule 7     instance -> ABSTRACT
Rule 8     instance -> CONCRETE
Rule 9     inheritance -> EXTENDS ID
Rule 10    inheritance -> IMPLEMENTS ID
Rule 11    inheritance -> empty
Rule 12    item_decls -> visibility scope final item_decl SEMICOLON item_decls
Rule 13    item_decls -> empty
Rule 14    visibility -> PUBLIC
Rule 15    visibility -> PROTECTED
Rule 16    visibility -> PRIVATE
Rule 17    scope -> STATIC
Rule 18    scope -> LOCAL
Rule 19    final -> FINAL
Rule 20    final -> BASE
Rule 21    item_decl -> atrib_decl
Rule 22    item_decl -> method_decl
Rule 23    atrib_decl -> type var var_list SEMICOLON
Rule 24    method_decl -> instance type method
Rule 25    type -> INT
Rule 26    type -> FLOAT
Rule 27    type -> DOUBLE
Rule 28    type -> CHAR
Rule 29    type -> VOID
Rule 30    type -> ID value
Rule 31    var -> ID array value
Rule 32    value -> ASSIGNMENT exp
Rule 33    value -> empty
Rule 34    var_list -> COMMA var var_list
Rule 35    var_list -> empty
Rule 36    array -> LSBRACKET RSBRACKET array
Rule 37    array -> empty
Rule 38    method -> ID LPAREN argument RPAREN bloc_com
Rule 39    argument -> type var arg_list
Rule 40    argument -> empty
Rule 41    arg_list -> COMMA argument
Rule 42    arg_list -> empty
Rule 43    bloc_com -> LCURLYBRACE com_list RCURLYBRACE
Rule 44    bloc -> bloc_com
Rule 45    bloc -> command SEMICOLON
Rule 46    com_list -> command com_list
Rule 47    com_list -> empty
Rule 48    command -> atrib SEMICOLON
Rule 49    command -> WHILE LPAREN exp_logic RPAREN bloc
Rule 50    command -> DO bloc WHILE LPAREN exp_logic RPAREN SEMICOLON
Rule 51    command -> IF LPAREN exp_logic RPAREN bloc else
Rule 52    command -> FOR LPAREN for_exp RPAREN bloc
Rule 53    command -> SWITCH LPAREN ID name RPAREN LCURLYBRACE switch_case RCURLYBRACE
Rule 54    command -> BREAK SEMICOLON
Rule 55    command -> CONTINUE SEMICOLON
Rule 56    command -> RETURN exp SEMICOLON
Rule 57    atrib -> ID name ASSIGNMENT exp
Rule 58    else -> ELSE bloc
Rule 59    else -> empty
Rule 60    for_exp -> atrib_decl SEMICOLON exp_logic SEMICOLON atrib
Rule 61    for_exp -> type ID COLON ID name
Rule 62    switch_case -> CASE const COLON bloc switch_case
Rule 63    switch_case -> DEFAULT bloc
Rule 64    exp -> exp_math
Rule 65    exp -> exp_logic
Rule 66    exp -> operator ID name
Rule 67    exp -> NEW type name
Rule 68    operator -> DOUBLEPLUS
Rule 69    operator -> DOUBLEMINUS
Rule 70    params -> param param_list
Rule 71    params -> empty
Rule 72    param_list -> COMMA param param_list
Rule 73    param_list -> empty
Rule 74    exp_logic -> exp_math op_logic exp_logic_tail
Rule 75    exp_logic -> operator ID name op_logic exp_logic_tail
Rule 76    exp_logic -> NEW type name op_logic exp_logic_tail
Rule 77    exp_logic -> exp_logic_tail
Rule 78    exp_logic_tail -> exp_math
Rule 79    exp_logic_tail -> empty
Rule 80    exp_math -> param op_math exp_math
Rule 81    exp_math -> param
Rule 82    op_logic -> MORETHAN
Rule 83    op_logic -> LESSTHAN
Rule 84    op_logic -> MOREOREQUALTHAN
Rule 85    op_logic -> LESSOREQUALTHAN
Rule 86    op_logic -> DOUBLEEQUALS
Rule 87    op_logic -> NOTEQUAL
Rule 88    op_math -> PLUS
Rule 89    op_math -> MINUS
Rule 90    op_math -> TIMES
Rule 91    op_math -> DIVIDE
Rule 92    param -> ID name
Rule 93    param -> THIS field
Rule 94    param -> const
Rule 95    name -> field
Rule 96    name -> array_size name_non_empty
Rule 97    name -> LPAREN params RPAREN name_non_empty
Rule 98    name -> empty
Rule 99    name_non_empty -> field
Rule 100   name_non_empty -> array_size name_non_empty
Rule 101   name_non_empty -> LPAREN params RPAREN name_non_empty
Rule 102   field -> DOT ID name_non_empty
Rule 103   field -> empty
Rule 104   array_size -> LSBRACKET exp_math RSBRACKET array_size_non_empty
Rule 105   array_size -> empty
Rule 106   array_size_non_empty -> LSBRACKET exp_math RSBRACKET array_size_non_empty
Rule 107   array_size_non_empty -> empty
Rule 108   const -> NUMBER
Rule 109   const -> STRING
Rule 110   const -> CHARACTER
Rule 111   const -> TRUE
Rule 112   const -> FALSE
Rule 113   empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 7
ASSIGNMENT           : 32 57
BASE                 : 20
BREAK                : 54
CASE                 : 62
CHAR                 : 28
CHARACTER            : 110
CLASS                : 5
COLON                : 61 62
COMMA                : 34 41 72
CONCRETE             : 8
CONTINUE             : 55
DEFAULT              : 63
DIVIDE               : 91
DO                   : 50
DOT                  : 102
DOUBLE               : 27
DOUBLEEQUALS         : 86
DOUBLEMINUS          : 69
DOUBLEPLUS           : 68
ELSE                 : 58
EXTENDS              : 9
FALSE                : 112
FINAL                : 19
FLOAT                : 26
FOR                  : 52
ID                   : 4 9 10 30 31 38 53 57 61 61 66 75 92 102
IF                   : 51
IMPLEMENTS           : 10
INT                  : 25
INTERFACE            : 6
LCURLYBRACE          : 4 43 53
LESSOREQUALTHAN      : 85
LESSTHAN             : 83
LOCAL                : 18
LPAREN               : 38 49 50 51 52 53 97 101
LSBRACKET            : 36 104 106
MINUS                : 89
MOREOREQUALTHAN      : 84
MORETHAN             : 82
NEW                  : 67 76
NOTEQUAL             : 87
NUMBER               : 108
PLUS                 : 88
PRIVATE              : 16
PROTECTED            : 15
PUBLIC               : 14
RCURLYBRACE          : 4 43 53
RETURN               : 56
RPAREN               : 38 49 50 51 52 53 97 101
RSBRACKET            : 36 104 106
SEMICOLON            : 12 23 45 48 50 54 55 56 60 60
STATIC               : 17
STRING               : 109
SWITCH               : 53
THIS                 : 93
TIMES                : 90
TRUE                 : 111
VOID                 : 29
WHILE                : 49 50
WHITE_SPACE          : 
error                : 

Nonterminals, with rules where they appear

arg_list             : 39
argument             : 38 41
array                : 31 36
array_size           : 96 100
array_size_non_empty : 104 106
atrib                : 48 60
atrib_decl           : 21 60
bloc                 : 49 50 51 52 58 62 63
bloc_com             : 38 44
com_list             : 43 46
command              : 45 46
const                : 62 94
declaration          : 1 2
declarations         : 1 2
else                 : 51
empty                : 3 11 13 33 35 37 40 42 47 59 71 73 79 98 103 105 107
exp                  : 32 56 57
exp_logic            : 49 50 51 60 65
exp_logic_tail       : 74 75 76 77
exp_math             : 64 74 78 80 104 106
field                : 93 95 99
final                : 12
for_exp              : 52
inheritance          : 4
instance             : 5 24
item_decl            : 12
item_decls           : 4 12
method               : 24
method_decl          : 22
name                 : 53 57 61 66 67 75 76 92
name_non_empty       : 96 97 100 101 102
op_logic             : 74 75 76
op_math              : 80
operator             : 66 75
param                : 70 72 80 81
param_list           : 70 72
params               : 97 101
program              : 0
scope                : 12
struct               : 4
switch_case          : 53 62
type                 : 23 24 39 61 67 76
value                : 30 31
var                  : 23 34 39
var_list             : 23 34
visibility           : 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration declarations
    (4) declaration -> . struct ID inheritance LCURLYBRACE item_decls RCURLYBRACE
    (5) struct -> . instance CLASS
    (6) struct -> . INTERFACE
    (7) instance -> . ABSTRACT
    (8) instance -> . CONCRETE

    INTERFACE       shift and go to state 5
    ABSTRACT        shift and go to state 6
    CONCRETE        shift and go to state 7

    program                        shift and go to state 1
    declaration                    shift and go to state 2
    struct                         shift and go to state 3
    instance                       shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration . declarations
    (2) declarations -> . declaration declarations
    (3) declarations -> . empty
    (4) declaration -> . struct ID inheritance LCURLYBRACE item_decls RCURLYBRACE
    (113) empty -> .
    (5) struct -> . instance CLASS
    (6) struct -> . INTERFACE
    (7) instance -> . ABSTRACT
    (8) instance -> . CONCRETE

    $end            reduce using rule 113 (empty -> .)
    INTERFACE       shift and go to state 5
    ABSTRACT        shift and go to state 6
    CONCRETE        shift and go to state 7

    declaration                    shift and go to state 8
    declarations                   shift and go to state 9
    empty                          shift and go to state 10
    struct                         shift and go to state 3
    instance                       shift and go to state 4

state 3

    (4) declaration -> struct . ID inheritance LCURLYBRACE item_decls RCURLYBRACE

    ID              shift and go to state 11


state 4

    (5) struct -> instance . CLASS

    CLASS           shift and go to state 12


state 5

    (6) struct -> INTERFACE .

    ID              reduce using rule 6 (struct -> INTERFACE .)


state 6

    (7) instance -> ABSTRACT .

    CLASS           reduce using rule 7 (instance -> ABSTRACT .)
    INT             reduce using rule 7 (instance -> ABSTRACT .)
    FLOAT           reduce using rule 7 (instance -> ABSTRACT .)
    DOUBLE          reduce using rule 7 (instance -> ABSTRACT .)
    CHAR            reduce using rule 7 (instance -> ABSTRACT .)
    VOID            reduce using rule 7 (instance -> ABSTRACT .)
    ID              reduce using rule 7 (instance -> ABSTRACT .)


state 7

    (8) instance -> CONCRETE .

    CLASS           reduce using rule 8 (instance -> CONCRETE .)
    INT             reduce using rule 8 (instance -> CONCRETE .)
    FLOAT           reduce using rule 8 (instance -> CONCRETE .)
    DOUBLE          reduce using rule 8 (instance -> CONCRETE .)
    CHAR            reduce using rule 8 (instance -> CONCRETE .)
    VOID            reduce using rule 8 (instance -> CONCRETE .)
    ID              reduce using rule 8 (instance -> CONCRETE .)


state 8

    (2) declarations -> declaration . declarations
    (2) declarations -> . declaration declarations
    (3) declarations -> . empty
    (4) declaration -> . struct ID inheritance LCURLYBRACE item_decls RCURLYBRACE
    (113) empty -> .
    (5) struct -> . instance CLASS
    (6) struct -> . INTERFACE
    (7) instance -> . ABSTRACT
    (8) instance -> . CONCRETE

    $end            reduce using rule 113 (empty -> .)
    INTERFACE       shift and go to state 5
    ABSTRACT        shift and go to state 6
    CONCRETE        shift and go to state 7

    declaration                    shift and go to state 8
    declarations                   shift and go to state 13
    empty                          shift and go to state 10
    struct                         shift and go to state 3
    instance                       shift and go to state 4

state 9

    (1) program -> declaration declarations .

    $end            reduce using rule 1 (program -> declaration declarations .)


state 10

    (3) declarations -> empty .

    $end            reduce using rule 3 (declarations -> empty .)


state 11

    (4) declaration -> struct ID . inheritance LCURLYBRACE item_decls RCURLYBRACE
    (9) inheritance -> . EXTENDS ID
    (10) inheritance -> . IMPLEMENTS ID
    (11) inheritance -> . empty
    (113) empty -> .

    EXTENDS         shift and go to state 15
    IMPLEMENTS      shift and go to state 16
    LCURLYBRACE     reduce using rule 113 (empty -> .)

    inheritance                    shift and go to state 14
    empty                          shift and go to state 17

state 12

    (5) struct -> instance CLASS .

    ID              reduce using rule 5 (struct -> instance CLASS .)


state 13

    (2) declarations -> declaration declarations .

    $end            reduce using rule 2 (declarations -> declaration declarations .)


state 14

    (4) declaration -> struct ID inheritance . LCURLYBRACE item_decls RCURLYBRACE

    LCURLYBRACE     shift and go to state 18


state 15

    (9) inheritance -> EXTENDS . ID

    ID              shift and go to state 19


state 16

    (10) inheritance -> IMPLEMENTS . ID

    ID              shift and go to state 20


state 17

    (11) inheritance -> empty .

    LCURLYBRACE     reduce using rule 11 (inheritance -> empty .)


state 18

    (4) declaration -> struct ID inheritance LCURLYBRACE . item_decls RCURLYBRACE
    (12) item_decls -> . visibility scope final item_decl SEMICOLON item_decls
    (13) item_decls -> . empty
    (14) visibility -> . PUBLIC
    (15) visibility -> . PROTECTED
    (16) visibility -> . PRIVATE
    (113) empty -> .

    PUBLIC          shift and go to state 24
    PROTECTED       shift and go to state 25
    PRIVATE         shift and go to state 26
    RCURLYBRACE     reduce using rule 113 (empty -> .)

    item_decls                     shift and go to state 21
    visibility                     shift and go to state 22
    empty                          shift and go to state 23

state 19

    (9) inheritance -> EXTENDS ID .

    LCURLYBRACE     reduce using rule 9 (inheritance -> EXTENDS ID .)


state 20

    (10) inheritance -> IMPLEMENTS ID .

    LCURLYBRACE     reduce using rule 10 (inheritance -> IMPLEMENTS ID .)


state 21

    (4) declaration -> struct ID inheritance LCURLYBRACE item_decls . RCURLYBRACE

    RCURLYBRACE     shift and go to state 27


state 22

    (12) item_decls -> visibility . scope final item_decl SEMICOLON item_decls
    (17) scope -> . STATIC
    (18) scope -> . LOCAL

    STATIC          shift and go to state 29
    LOCAL           shift and go to state 30

    scope                          shift and go to state 28

state 23

    (13) item_decls -> empty .

    RCURLYBRACE     reduce using rule 13 (item_decls -> empty .)


state 24

    (14) visibility -> PUBLIC .

    STATIC          reduce using rule 14 (visibility -> PUBLIC .)
    LOCAL           reduce using rule 14 (visibility -> PUBLIC .)


state 25

    (15) visibility -> PROTECTED .

    STATIC          reduce using rule 15 (visibility -> PROTECTED .)
    LOCAL           reduce using rule 15 (visibility -> PROTECTED .)


state 26

    (16) visibility -> PRIVATE .

    STATIC          reduce using rule 16 (visibility -> PRIVATE .)
    LOCAL           reduce using rule 16 (visibility -> PRIVATE .)


state 27

    (4) declaration -> struct ID inheritance LCURLYBRACE item_decls RCURLYBRACE .

    INTERFACE       reduce using rule 4 (declaration -> struct ID inheritance LCURLYBRACE item_decls RCURLYBRACE .)
    ABSTRACT        reduce using rule 4 (declaration -> struct ID inheritance LCURLYBRACE item_decls RCURLYBRACE .)
    CONCRETE        reduce using rule 4 (declaration -> struct ID inheritance LCURLYBRACE item_decls RCURLYBRACE .)
    $end            reduce using rule 4 (declaration -> struct ID inheritance LCURLYBRACE item_decls RCURLYBRACE .)


state 28

    (12) item_decls -> visibility scope . final item_decl SEMICOLON item_decls
    (19) final -> . FINAL
    (20) final -> . BASE

    FINAL           shift and go to state 32
    BASE            shift and go to state 33

    final                          shift and go to state 31

state 29

    (17) scope -> STATIC .

    FINAL           reduce using rule 17 (scope -> STATIC .)
    BASE            reduce using rule 17 (scope -> STATIC .)


state 30

    (18) scope -> LOCAL .

    FINAL           reduce using rule 18 (scope -> LOCAL .)
    BASE            reduce using rule 18 (scope -> LOCAL .)


state 31

    (12) item_decls -> visibility scope final . item_decl SEMICOLON item_decls
    (21) item_decl -> . atrib_decl
    (22) item_decl -> . method_decl
    (23) atrib_decl -> . type var var_list SEMICOLON
    (24) method_decl -> . instance type method
    (25) type -> . INT
    (26) type -> . FLOAT
    (27) type -> . DOUBLE
    (28) type -> . CHAR
    (29) type -> . VOID
    (30) type -> . ID value
    (7) instance -> . ABSTRACT
    (8) instance -> . CONCRETE

    INT             shift and go to state 39
    FLOAT           shift and go to state 40
    DOUBLE          shift and go to state 41
    CHAR            shift and go to state 42
    VOID            shift and go to state 43
    ID              shift and go to state 44
    ABSTRACT        shift and go to state 6
    CONCRETE        shift and go to state 7

    item_decl                      shift and go to state 34
    atrib_decl                     shift and go to state 35
    method_decl                    shift and go to state 36
    type                           shift and go to state 37
    instance                       shift and go to state 38

state 32

    (19) final -> FINAL .

    INT             reduce using rule 19 (final -> FINAL .)
    FLOAT           reduce using rule 19 (final -> FINAL .)
    DOUBLE          reduce using rule 19 (final -> FINAL .)
    CHAR            reduce using rule 19 (final -> FINAL .)
    VOID            reduce using rule 19 (final -> FINAL .)
    ID              reduce using rule 19 (final -> FINAL .)
    ABSTRACT        reduce using rule 19 (final -> FINAL .)
    CONCRETE        reduce using rule 19 (final -> FINAL .)


state 33

    (20) final -> BASE .

    INT             reduce using rule 20 (final -> BASE .)
    FLOAT           reduce using rule 20 (final -> BASE .)
    DOUBLE          reduce using rule 20 (final -> BASE .)
    CHAR            reduce using rule 20 (final -> BASE .)
    VOID            reduce using rule 20 (final -> BASE .)
    ID              reduce using rule 20 (final -> BASE .)
    ABSTRACT        reduce using rule 20 (final -> BASE .)
    CONCRETE        reduce using rule 20 (final -> BASE .)


state 34

    (12) item_decls -> visibility scope final item_decl . SEMICOLON item_decls

    SEMICOLON       shift and go to state 45


state 35

    (21) item_decl -> atrib_decl .

    SEMICOLON       reduce using rule 21 (item_decl -> atrib_decl .)


state 36

    (22) item_decl -> method_decl .

    SEMICOLON       reduce using rule 22 (item_decl -> method_decl .)


state 37

    (23) atrib_decl -> type . var var_list SEMICOLON
    (31) var -> . ID array value

    ID              shift and go to state 47

    var                            shift and go to state 46

state 38

    (24) method_decl -> instance . type method
    (25) type -> . INT
    (26) type -> . FLOAT
    (27) type -> . DOUBLE
    (28) type -> . CHAR
    (29) type -> . VOID
    (30) type -> . ID value

    INT             shift and go to state 39
    FLOAT           shift and go to state 40
    DOUBLE          shift and go to state 41
    CHAR            shift and go to state 42
    VOID            shift and go to state 43
    ID              shift and go to state 44

    type                           shift and go to state 48

state 39

    (25) type -> INT .

    ID              reduce using rule 25 (type -> INT .)
    LPAREN          reduce using rule 25 (type -> INT .)
    DOT             reduce using rule 25 (type -> INT .)
    LSBRACKET       reduce using rule 25 (type -> INT .)
    MORETHAN        reduce using rule 25 (type -> INT .)
    LESSTHAN        reduce using rule 25 (type -> INT .)
    MOREOREQUALTHAN reduce using rule 25 (type -> INT .)
    LESSOREQUALTHAN reduce using rule 25 (type -> INT .)
    DOUBLEEQUALS    reduce using rule 25 (type -> INT .)
    NOTEQUAL        reduce using rule 25 (type -> INT .)
    COMMA           reduce using rule 25 (type -> INT .)
    SEMICOLON       reduce using rule 25 (type -> INT .)
    RPAREN          reduce using rule 25 (type -> INT .)


state 40

    (26) type -> FLOAT .

    ID              reduce using rule 26 (type -> FLOAT .)
    LPAREN          reduce using rule 26 (type -> FLOAT .)
    DOT             reduce using rule 26 (type -> FLOAT .)
    LSBRACKET       reduce using rule 26 (type -> FLOAT .)
    MORETHAN        reduce using rule 26 (type -> FLOAT .)
    LESSTHAN        reduce using rule 26 (type -> FLOAT .)
    MOREOREQUALTHAN reduce using rule 26 (type -> FLOAT .)
    LESSOREQUALTHAN reduce using rule 26 (type -> FLOAT .)
    DOUBLEEQUALS    reduce using rule 26 (type -> FLOAT .)
    NOTEQUAL        reduce using rule 26 (type -> FLOAT .)
    COMMA           reduce using rule 26 (type -> FLOAT .)
    SEMICOLON       reduce using rule 26 (type -> FLOAT .)
    RPAREN          reduce using rule 26 (type -> FLOAT .)


state 41

    (27) type -> DOUBLE .

    ID              reduce using rule 27 (type -> DOUBLE .)
    LPAREN          reduce using rule 27 (type -> DOUBLE .)
    DOT             reduce using rule 27 (type -> DOUBLE .)
    LSBRACKET       reduce using rule 27 (type -> DOUBLE .)
    MORETHAN        reduce using rule 27 (type -> DOUBLE .)
    LESSTHAN        reduce using rule 27 (type -> DOUBLE .)
    MOREOREQUALTHAN reduce using rule 27 (type -> DOUBLE .)
    LESSOREQUALTHAN reduce using rule 27 (type -> DOUBLE .)
    DOUBLEEQUALS    reduce using rule 27 (type -> DOUBLE .)
    NOTEQUAL        reduce using rule 27 (type -> DOUBLE .)
    COMMA           reduce using rule 27 (type -> DOUBLE .)
    SEMICOLON       reduce using rule 27 (type -> DOUBLE .)
    RPAREN          reduce using rule 27 (type -> DOUBLE .)


state 42
